--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
     .description p b {
         color: white;
         cursor: pointer;
+        padding-left: 5px;
     }
 
     .description button {
@@ -562,4 +563,25 @@ body.showCart .cartTab {
     top: 100px;
     left: 260px;
     cursor: pointer;
+}
+
+.couting_number {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 375px;
+    height: 45px;
+    box-shadow: 0 3px 8px rgb(169, 169, 169);
+    border-radius: 12px;
+    margin: 25px 0 0 15px;
+}
+
+.total_price {
+    font-size: 25px;
+    color: #000;
+}
+
+.cost {
+    font-size: 25px;
+    color: #000;
 }
